--- a/.github/workflows/scrape-nightly.yml
+++ b/.github/workflows/scrape-nightly.yml
@@ -23,3 +23,10 @@ jobs:
         run: pip install -r requirements.txt
       - name: install chromedriver
         uses: nanasess/setup-chromedriver@v2
+      - name: scrape data and upload to vercel KV
+        env:
+          SWITCH2_USERNAME: ${{secrets.switch2_username}}
+          SWITCH2_PASSWORD: ${{secrets.switch2_password}}
+          KV_REST_API_TOKEN: ${{secrets.kv_rest_api_token}}
+          KV_REST_API_URL: ${{secrets.kv_rest_api_url}}
+        run: python3 scrape.py
