--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,14 +6,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "npx prettier . --write"
   },
   "dependencies": {
     "@vercel/kv": "^2.0.0",
+    "csstype": "^3.1.3",
     "d3-array": "^3.2.4",
     "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-multi-carousel": "^2.8.5",
     "recharts": "^2.12.7"
   },
   "devDependencies": {
@@ -22,6 +25,10 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.6",
+    "prettier": "^3.3.3",
+    "prettier-plugin-organize-imports": "^4.0.0",
+    "stylelint": "^16.8.2",
+    "stylelint-config-standard": "^36.0.1",
     "typescript": "^5"
   }
 }
