--- a/.github/workflows/scrape-nightly.yml
+++ b/.github/workflows/scrape-nightly.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           version: 0.4.0
           enable-cache: 'true'
-          cache-dependency-glob: './backend/uv.lock'
+          cache-dependency-glob: 'backend/uv.lock'
       - name: install chromedriver
         uses: nanasess/setup-chromedriver@v2
       - name: scrape data and upload to vercel KV
