--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-multi-carousel": "^2.8.5",
-    "recharts": "^2.12.7"
+    "recharts": "^2.12.7",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -29,6 +30,6 @@
     "prettier-plugin-organize-imports": "^4.0.0",
     "stylelint": "^16.8.2",
     "stylelint-config-standard": "^36.0.1",
-    "typescript": "^5"
+    "typescript": "^5.5.4"
   }
 }
