--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,12 +7,12 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "npx prettier . --write"
+    "format": "npx prettier . --write && npx stylelint '**/*.css' --fix"
   },
   "dependencies": {
     "@vercel/kv": "^2.0.0",
-    "csstype": "^3.1.3",
     "d3-array": "^3.2.4",
+    "dayjs": "^1.11.13",
     "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18",
@@ -28,7 +28,7 @@
     "eslint-config-next": "14.2.6",
     "prettier": "^3.3.3",
     "prettier-plugin-organize-imports": "^4.0.0",
-    "stylelint": "^16.8.2",
+    "stylelint": "^16.9.0",
     "stylelint-config-standard": "^36.0.1",
     "typescript": "^5.5.4"
   }
