--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
     "d3-array": "^3.2.4",
     "dayjs": "^1.11.13",
     "lodash.groupby": "^4.6.0",
-    "next": "14.2.6",
+    "next": "^14.2.13",
     "react": "^18",
     "react-dom": "^18",
     "react-multi-carousel": "^2.8.5",
